IngressRoutes/4-ingressroutetcp-rancher.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: hostnames
  namespace: ids-2
spec:
  entryPoints:
    - websecure 
  routes:
  - match: HostSNI(`hostnames.platform.flexigrobots-h2020.eu`)
    services:
    - name: hostnames
      namespace: ids-2
      port: 8082        
  tls:
    certResolver: default      
    passthrough: true 

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: connectora
  namespace: ids-2
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`connectora.platform.flexigrobots-h2020.eu`)
    services:
    - name: connectora
      namespace: ids-2
      port: 8080
      #proxyProtocol:
      #  version: 1
      
  tls:
    certResolver: default     
    passthrough: true 
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: connectorb
  namespace: ids-2
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`connectorb.platform.flexigrobots-h2020.eu`)
    services:
    - name: connectorb
      namespace: ids-2
      port: 8081
  tls:
    certResolver: letsencrypt
    passthrough: true 
---
